sistemazione schede e generazione pagina catastali

--- a/src/app/catastali/catastali.page.html
+++ b/src/app/catastali/catastali.page.html
@@ -18,8 +18,9 @@
             <div class="tool-table">
                 <div class="tool-row">
                     <div class="tool">
-                        <a href="#" class="button back only-icon">&nbsp;</a> <h3 class="page-title cliente">Francesca Palmi - Immobile</h3>
-                        <div style="float: right"><a href="#" class="button view">Catastali</a><a href="#" class="button edit">Modifica</a></div>
+                        <a href="#" class="button back only-icon">&nbsp;</a>
+                        <h3 class="page-title cliente">Francesca Palmi - Catastali</h3>
+                        <div style="float: right"><a href="#" class="button upload">Invia scheda</a></div>
                     </div>
                 </div>
             </div>
@@ -36,7 +37,7 @@
                     </div>
                 </div>
                 <div class="scheda-content">
-                    <div class="scheda-table">
+                    <div class="scheda-table single-column">
                         <div class="scheda-row">
                             <div class="item">
                                 <div class="item-title">Abitazioni <a href="#" class="button view only-icon">&nbsp;</a></div>
@@ -58,24 +59,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="scheda-row">
-                            <div class="item">
-                                <h3 class="item-title">Abitazioni <span>500K</span></h3>
-                                <ul class="item-list">
-                                    <li><span>Elemento</span><span>valore</span></li>
-                                    <li><span>Elemento</span><span>valore</span></li>
-                                    <li><span>Elemento</span><span>valore</span></li>
-                                </ul>
-                            </div>
-                            <div class="item">
-                                <h3 class="item-title">Abitazioni <span>500K</span></h3>
-                                <ul class="item-list">
-                                    <li><span>Elemento</span><span>valore</span></li>
-                                    <li><span>Elemento</span><span>valore</span></li>
-                                    <li><span>Elemento</span><span>valore</span></li>
-                                </ul>
-                            </div>
-                        </div>
+                       
                     </div>
                 </div>
             </div>
