--- a/src/app/patrimonio/patrimonio.page.html
+++ b/src/app/patrimonio/patrimonio.page.html
@@ -18,8 +18,8 @@
             <div class="tool-table">
                 <div class="tool-row">
                     <div class="tool">
-                        <a href="#" class="button back only-icon">&nbsp;</a> <h3 class="page-title cliente">Francesca Palmi - Immobile</h3>
-                        <div style="float: right"><a href="#" class="button view">Catastali</a><a href="#" class="button edit">Modifica</a></div>
+                        <a href="#" class="button back only-icon">&nbsp;</a>
+                        <h3 class="page-title cliente">Francesca Palmi - Immobile</h3>
                     </div>
                 </div>
             </div>
@@ -29,9 +29,10 @@
                 <div class="scheda-header">
                     <div class="scheda-table">
                         <div class="scheda-row">
-                            <div class="item tipologia abitazione"></div>
-                            <div class="item indirizzo">piazza privata Guide Maquiguas, Cervinia</div>
-                            <div class="item date"><span>Novembre</span><span>20</span><span>2019</span></div>
+                            <div class="item immobili"><span class="badge">4</span></div>
+                            <div class="item bv"><span class="bv_label">Book Value (&euro;)</span><span class="bv_value">450K</span></div>
+                            <div class="item anagrafica"><span class="nome">Paolo Rossi</span><span class="cf">PLARSS80A01L219Q</span><span class="email">paolo.rossi@domain.it</span></div>
+                            <div class="item tools"></div>
                         </div>
                     </div>
                 </div>
