--- a/src/global.scss
+++ b/src/global.scss
@@ -625,132 +625,6 @@ ion-content.body {
     }
 }
 
-.right-area {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    width: $default-right-area-width;
-    .header {
-        background: #fff;
-        width: 100%;
-        height: 80px;
-        display: table;
-        border-top-left-radius: 50px;
-        border: solid 1px #ccc;
-        position: relative;
-        &:after {
-            content: "";
-            position: absolute; 
-            bottom: -6px;
-            left: 0;
-            width: 100%;
-            height: 6px;
-            background-image: url('/assets/img/shadow-before@2x.png') ;
-            background-repeat: repeat-x;
-            background-position: left top;
-            z-index: 10;
-        }
-    }
-    .header-cell {
-        display: table-cell;
-        vertical-align: middle;
-        padding: 20px 0 0 30px;
-        span {
-            display: block;
-            &.small {
-                font-size: .7em;
-                color: $label-color;
-            }
-            &.nome {
-                color: $highlight-text-color;
-            }
-        }
-    }
-    .list {
-        background-color:#fff;
-        overflow: auto;
-        position: absolute;
-        top: 80px;
-        bottom: 60px;
-        width: 100%;
-        border-left: solid 1px #ccc;
-    }
-    .immobile {
-        padding: 20px 0 0 10px;
-        border-bottom: solid 1px #ccc;
-        position: relative;
-        height: 90px;
-        &.selected {
-            background-color: $default-light-blue;
-        }
-        .indirizzo {
-            font-size: .8em;
-            padding-left: 20px;
-            background: url('/assets/img/icon-position@2x.png') no-repeat left top;
-
-        }
-        .tipologia, .quota {
-            position: absolute;
-            height: 45px;
-            width: 60px;
-            text-align:center;
-            border-left: solid 1px #ccc;
-            right: 0;
-        }
-        .tipologia {
-            border-bottom: solid 1px #ccc;
-            top: 0;
-            .abitazione {
-                background-repeat: no-repeat;
-                background-position: center;
-                background-image: url('/assets/img/icon-abitazione@2x.png') ;
-            }
-            .parcheggio {
-                background-repeat: no-repeat;
-                background-position: center;
-                background-image: url('/assets/img/icon-parcheggio@2x.png') ;
-            }
-            .magazzino {
-                background-repeat: no-repeat;
-                background-position: center;
-                background-image: url('/assets/img/icon-magazzino@2x.png') ;
-            }
-            .commerciale {
-                background-repeat: no-repeat;
-                background-position: center;
-                background-image: url('/assets/img/icon-commerciale@2x.png') ;
-            }
-        }
-        .quota {
-            bottom: 0;
-        }
-    }
-    .footer {
-        background-color:#fff;
-        overflow: auto;
-        position: absolute;
-        bottom: 0;
-        height: 60px;
-        width: 100%;
-        border-left: solid 1px #ccc;
-        border-top: solid 1px #ccc;
-        text-align: center;
-        &:before {
-            content: "";
-            position: absolute; 
-            top: -6px;
-            left: 0;
-            width: 100%;
-            height: 6px;
-            background-image: url('/assets/img/shadow-after@2x.png') ;
-            background-repeat: repeat-x;
-            background-position: left top;
-            z-index: 10;
-        }
-    }
-}
-
 /* scheda */
 
 .scheda {
@@ -971,6 +845,293 @@ ion-content.body {
     }
 }
 
+/* report */
+
+
+/* nav */
+
+.report-tab {
+    position: absolute;
+    top: 0;
+    height: $default-content-list-vertical-position;
+    left: $default-content-area-left-margin+50;
+    right: $default-content-area-right-margin;
+    ul {
+        li {
+            float: left;
+            margin-right: 10px;
+            font-size: 1em;
+            font-weight: bold;
+            text-transform: uppercase;
+            font-family: Arial, sans-serif;
+            border: solid 1px #ccc;
+            border-radius: 5px 5px 0 0;
+            background: #eee;
+            padding: 15px;
+            width: 180px;
+            text-align: center;
+            &.active {
+                background: #fff;
+                border-bottom: solid 1px #fff;
+                position: relative;
+                &:after {
+                    content: "";
+                    position: absolute;
+                    bottom: -50px;
+                    left: 0px;
+                    display: block;
+                    background: #fff;
+                    height: 50px;
+                    width: 178px;
+                }
+            }
+        }
+    }
+}
+
+.report-data {
+    position: absolute;
+    top: $default-content-list-vertical-position - 50;
+    padding-left: 15px;
+    padding-right: 10px;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    font-size: .85em;
+    .table-row {
+        display: table-row;
+    }
+    
+    .table-cell {
+        padding: 10px 0;
+        margin: 0 20px;
+        display: table-cell;
+        &:nth-child(1) {
+            width: 25%;
+        }
+        &:nth-child(2) {
+            width: 7%;
+        }
+        &:nth-child(3) {
+            width: 8%;
+        }
+        &:nth-child(4) {
+            width: 10%;
+        }
+        &:nth-child(5) {
+            width: 10%;
+        }
+        &:nth-child(6) {
+            width: 10%;
+        }
+    }
+    .table-header {
+        display: table;
+        width:100%;
+        .table-cell {
+            padding: 20px 0; 
+        }
+    }
+    .table-body-container {
+        overflow: auto;
+        height: 395px;
+        .table-body {
+            display: table;
+            width:100%;
+            .table-cell {
+                border-bottom: dashed 1px $grey-1;
+                display: table-cell;
+                border-right: solid 1px $grey-1;
+                &:nth-child(1) {
+                    text-align: left;
+                }
+                &:last-of-type {
+                    border-right: none;
+                }
+            }
+        }
+    }
+    .table-total-container {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        padding-left: 15px;
+        padding-right: 10px;
+        border-top: solid 1px #ccc;
+        background: #fff;
+        .table-total {
+            display: table;
+            width:100%;
+            padding: 20px 0;
+            .table-cell {
+                display: table-cell;
+                border-right: solid 1px $grey-1;
+                &:nth-child(1) {
+                    text-align: left;
+                }
+                &:last-of-type {
+                    border-right: none;
+                }
+            }
+        }
+    }
+}
 
 
 
+/* RIGHT AREA */
+
+
+
+
+.right-area {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: $default-right-area-width;
+    .header {
+        background: #fff;
+        width: 100%;
+        height: 80px;
+        display: table;
+        border-top-left-radius: 50px;
+        border: solid 1px #ccc;
+        position: relative;
+        &:after {
+            content: "";
+            position: absolute; 
+            bottom: -6px;
+            left: 0;
+            width: 100%;
+            height: 6px;
+            background-image: url('/assets/img/shadow-before@2x.png') ;
+            background-repeat: repeat-x;
+            background-position: left top;
+            z-index: 10;
+        }
+    }
+    .header-cell {
+        display: table-cell;
+        vertical-align: middle;
+        padding: 20px 0 0 30px;
+        span {
+            display: block;
+            &.small {
+                font-size: .7em;
+                color: $label-color;
+            }
+            &.nome {
+                color: $highlight-text-color;
+            }
+        }
+    }
+    .list {
+        background-color:#fff;
+        overflow: auto;
+        position: absolute;
+        top: 80px;
+        bottom: 60px;
+        width: 100%;
+        border-left: solid 1px #ccc;
+        &.no-footer {
+            bottom: 0;
+        }
+    }
+    .immobile {
+        padding: 20px 0 0 10px;
+        border-bottom: solid 1px #ccc;
+        position: relative;
+        height: 90px;
+        &.selected {
+            background-color: $default-light-blue;
+        }
+        .indirizzo {
+            font-size: .8em;
+            padding-left: 20px;
+            background: url('/assets/img/icon-position@2x.png') no-repeat left top;
+
+        }
+        .tipologia, .quota {
+            position: absolute;
+            height: 45px;
+            width: 60px;
+            text-align:center;
+            border-left: solid 1px #ccc;
+            right: 0;
+        }
+        .tipologia {
+            border-bottom: solid 1px #ccc;
+            top: 0;
+            .abitazione {
+                background-repeat: no-repeat;
+                background-position: center;
+                background-image: url('/assets/img/icon-abitazione@2x.png') ;
+            }
+            .parcheggio {
+                background-repeat: no-repeat;
+                background-position: center;
+                background-image: url('/assets/img/icon-parcheggio@2x.png') ;
+            }
+            .magazzino {
+                background-repeat: no-repeat;
+                background-position: center;
+                background-image: url('/assets/img/icon-magazzino@2x.png') ;
+            }
+            .commerciale {
+                background-repeat: no-repeat;
+                background-position: center;
+                background-image: url('/assets/img/icon-commerciale@2x.png') ;
+            }
+        }
+        .quota {
+            bottom: 0;
+        }
+    }
+
+    .report-item {
+        border-bottom: solid 1px $grey-1;
+        position: relative;
+        font-size: .8em;
+        display: table;
+        width: 100%;
+        .item {
+            display: table-cell;
+            vertical-align: middle;
+            border-right: solid 1px $grey-1;
+            padding: 15px;
+        }
+        .item-value {
+            padding: 15px;
+            display: table-cell;
+            vertical-align: middle;
+            text-align:right;
+            width: 40%
+
+        }
+    }
+    .footer {
+        background-color:#fff;
+        overflow: auto;
+        position: absolute;
+        bottom: 0;
+        height: 60px;
+        width: 100%;
+        border-left: solid 1px #ccc;
+        border-top: solid 1px #ccc;
+        text-align: center;
+        &:before {
+            content: "";
+            position: absolute; 
+            top: -6px;
+            left: 0;
+            width: 100%;
+            height: 6px;
+            background-image: url('/assets/img/shadow-after@2x.png') ;
+            background-repeat: repeat-x;
+            background-position: left top;
+            z-index: 10;
+        }
+    }
+}
