--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
         </div>
-        <div class="content">
+        <div class="content home-list">
             <div class="header">
                 <div class="dettaglio-cliente">
                     <div class="cliente">
