--- a/src/app/report-generale/report-generale.page.html
+++ b/src/app/report-generale/report-generale.page.html
@@ -49,152 +49,48 @@
                             <div class="table-cell">Nino Bixio 12, Milano</div>
                             <div class="table-cell">100%</div>
                             <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
+                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
+                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
                             <div class="table-cell">10K &euro;</div>
                         </div>
                         <div class="table-row">
                             <div class="table-cell">Nino Bixio 12, Milano</div>
                             <div class="table-cell">100%</div>
                             <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
+                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
+                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
                             <div class="table-cell">10K &euro;</div>
                         </div>
                         <div class="table-row">
                             <div class="table-cell">Nino Bixio 12, Milano</div>
                             <div class="table-cell">100%</div>
                             <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
+                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
+                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
                             <div class="table-cell">10K &euro;</div>
                         </div>
                         <div class="table-row">
                             <div class="table-cell">Nino Bixio 12, Milano</div>
                             <div class="table-cell">100%</div>
                             <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
+                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
+                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
                             <div class="table-cell">10K &euro;</div>
                         </div>
                         <div class="table-row">
                             <div class="table-cell">Nino Bixio 12, Milano</div>
                             <div class="table-cell">100%</div>
                             <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
+                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
+                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
                             <div class="table-cell">10K &euro;</div>
                         </div>
                         <div class="table-row">
                             <div class="table-cell">Nino Bixio 12, Milano</div>
                             <div class="table-cell">100%</div>
                             <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
+                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
+                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
                             <div class="table-cell">10K &euro;</div>
                         </div>
                     </div>
@@ -205,9 +101,9 @@
                             <div class="table-cell">&nbsp;</div>
                             <div class="table-cell">&nbsp;</div>
                             <div class="table-cell">&nbsp;</div>
-                            <div class="table-cell">Passivi</div>
-                            <div class="table-cell">Attivi</div>
-                            <div class="table-cell">Totale</div>
+                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
+                            <div class="table-cell">10K &euro;</div>
+                            <div class="table-cell">10K &euro;</div>
                         </div>
                     </div>
                 </div>
