report analisi e piano ammortamento

--- a/src/app/catastali/catastali.page.html
+++ b/src/app/catastali/catastali.page.html
@@ -40,8 +40,68 @@
                     <div class="scheda-table single-column">
                         <div class="scheda-row">
                             <div class="item">
-                                <div class="item-title">Abitazioni <a href="#" class="button view only-icon">&nbsp;</a></div>
-                                <ul class="item-list">
+                                <h3 class="item-title">Abitazioni <a href="#" class="button view only-icon">&nbsp;</a></h3>
+                                <ul class="item-list full-height">
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
                                     <li><span>Elemento</span><span>valore</span></li>
                                     <li><span>Elemento</span><span>valore</span></li>
                                     <li><span>Elemento</span><span>valore</span></li>
@@ -52,7 +112,7 @@
                             </div>
                             <div class="item">
                                 <h3 class="item-title">Abitazioni <span>500K</span></h3>
-                                <ul class="item-list">
+                                <ul class="item-list full-height">
                                     <li><span>Elemento</span><span>valore</span></li>
                                     <li><span>Elemento</span><span>valore</span></li>
                                     <li><span>Elemento</span><span>valore</span></li>
