--- a/src/app/scheda-immobile/scheda-immobile.page.html
+++ b/src/app/scheda-immobile/scheda-immobile.page.html
@@ -40,7 +40,13 @@
                         <div class="scheda-row">
                             <div class="item">
                                 <div class="item-title">Abitazioni <a href="#" class="button view only-icon">&nbsp;</a></div>
-                                <ul class="item-list">
+                                <ul class="item-list half-height">
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
+                                    <li><span>Elemento</span><span>valore</span></li>
                                     <li><span>Elemento</span><span>valore</span></li>
                                     <li><span>Elemento</span><span>valore</span></li>
                                     <li><span>Elemento</span><span>valore</span></li>
@@ -51,7 +57,7 @@
                             </div>
                             <div class="item">
                                 <h3 class="item-title">Abitazioni <span>500K</span></h3>
-                                <ul class="item-list">
+                                <ul class="item-list half-height">
                                     <li><span>Elemento</span><span>valore</span></li>
                                     <li><span>Elemento</span><span>valore</span></li>
                                     <li><span>Elemento</span><span>valore</span></li>
@@ -61,7 +67,7 @@
                         <div class="scheda-row">
                             <div class="item">
                                 <h3 class="item-title">Abitazioni <span>500K</span></h3>
-                                <ul class="item-list">
+                                <ul class="item-list half-height">
                                     <li><span>Elemento</span><span>valore</span></li>
                                     <li><span>Elemento</span><span>valore</span></li>
                                     <li><span>Elemento</span><span>valore</span></li>
@@ -69,7 +75,7 @@
                             </div>
                             <div class="item">
                                 <h3 class="item-title">Abitazioni <span>500K</span></h3>
-                                <ul class="item-list">
+                                <ul class="item-list half-height">
                                     <li><span>Elemento</span><span>valore</span></li>
                                     <li><span>Elemento</span><span>valore</span></li>
                                     <li><span>Elemento</span><span>valore</span></li>
