--- a/src/global.scss
+++ b/src/global.scss
@@ -90,12 +90,14 @@ $colors: (
 /* Custom style */
 
 .table {
-    display: table
+    display: table;
+    width: 100%;
+    table-layout: fixed;
 }
-.row {
+.row, .table-row {
     display: table-row;
 }
-.cell {
+.cell, .table-cell {
     display: table-cell;
     vertical-align: middle;
 }
@@ -176,6 +178,10 @@ ul {
         padding-left: 20px;
         background-position: center;
     }
+}
+.overflow-container {
+    overflow: auto;
+    height: 100%;
 }
 
 .badge {
@@ -260,8 +266,25 @@ ul {
     color: $grey-default;
     text-decoration: none;
 }
-ion-content.body {
-    --background:  url('/assets/img/dashboard-header@2x.png') right top no-repeat ;
+ion-content {
+    &.body {
+        --background:  url('/assets/img/dashboard-header@2x.png') right top no-repeat ;
+        .content-area {
+            right: $default-right-area-width;
+        }
+        .tool-area {
+            right: $default-content-area-right-margin;
+        }
+    }
+    &.body-no-right-menu {
+        --background:  url('/assets/img/dashboard-header-repeat@2x.png') right top repeat-x ;
+        .content-area {
+            right: 0;
+        }
+         .tool-area {
+            right: $default-right-area-width;
+        }
+    }
 }
 
 .left-menu {
@@ -289,13 +312,13 @@ ion-content.body {
     bottom: 0;
     //left: $default-size;
     left: 0;
-    right: $default-right-area-width;
+    
     
     .tool-area {
         //background-color: #0f0;
         position: absolute;
         left: $default-content-area-left-margin;
-        right: $default-content-area-right-margin;
+        right: $default-right-area-width;
         height: 80px;
         .tool-table {
             height: 100%;
@@ -783,7 +806,7 @@ ion-content.body {
             border-right:solid 1px $border-right;
             border-left: solid 1px $border-left;
             border-top: solid 1px $border-right;
-            height: 250px;
+            //height: 250px;
             
             padding: 7px ;
             width: 50%;
@@ -816,11 +839,17 @@ ion-content.body {
                 }
             }
             .item-list {
-                height: 190px;
+                height: 100%;
+                &.half-height {
+                    height: 190px;
+                }
+                &.full-height {
+                    height: 420px;
+                }
                 overflow: auto;
                 li {
                     padding: 5px 15px;
-                    border-bottom: dashed 1px #ccc;
+                    border-bottom: dashed 1px $grey-1;
                     &:last-of-type {
                         border: none;
                     }
@@ -896,18 +925,17 @@ ion-content.body {
     }
 }
 
+/* data */
+
 .report-data {
     position: absolute;
     top: $default-content-list-vertical-position - 50;
-    padding-left: 15px;
+    padding-left: 10px;
     padding-right: 10px;
     bottom: 0;
     width: 100%;
     text-align: center;
     font-size: .85em;
-    .table-row {
-        display: table-row;
-    }
     
     .table-cell {
         padding: 10px 0;
@@ -940,15 +968,18 @@ ion-content.body {
         }
     }
     .table-body-container {
+        position: absolute;
+        top: 60px;
+        bottom: 77px;
         overflow: auto;
-        height: 395px;
+        left: 10px;
+        right: 10px;
         font-weight: 300;
         .table-body {
             display: table;
             width:100%;
             .table-cell {
                 border-bottom: dashed 1px $grey-1;
-                display: table-cell;
                 border-right: solid 1px $grey-1;
                 &:nth-child(1) {
                     text-align: left;
@@ -998,7 +1029,61 @@ ion-content.body {
     }
 }
 
+/* analisi */
 
+
+.report-analisi {
+    position: absolute;
+    top: $default-content-list-vertical-position - 50;
+    padding-left: 10px;
+    padding-right: 10px;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    font-size: .85em;
+    overflow: auto;
+}
+
+
+/* ammortmento */
+
+.ammortamento { 
+    .item {
+        .table-cell {
+            text-align: center;
+        }
+        .item-title  {
+            .table-cell {
+                font-size: .65em;
+                &:first-of-type {
+                    width: 11%;
+                    font-size: .9em;
+                    text-align: left;
+                }
+            }
+        }
+        .item-list {
+            height :auto !important;
+            padding: 0 15px;
+            .table-cell {
+                padding: 5px 0;
+                border-bottom: dashed 1px $grey-1;
+                //border-right: solid 1px $grey-1;
+                &:nth-child(1) {
+                    text-align: left;
+                }
+                &:last-of-type {
+                    border-right: none;
+                }
+                font-size: .8em;
+                &:first-of-type {
+                    width: 11%;
+                    text-align: left;
+                }
+            }
+        }
+    }
+}
 
 /* RIGHT AREA */
 
