--- a/src/app/wizard-destinazione/wizard-destinazione.page.html
+++ b/src/app/wizard-destinazione/wizard-destinazione.page.html
@@ -39,32 +39,22 @@
                         <div class="scheda-row">
                             <div class="item">
                                 <div class="item-title"><span class="step">1</span> Aggiungi o modifica l'indirizzo dell'immobile</div>
-                                
+
                             </div>
                         </div>
                         <div class="scheda-table">
                             <div class="item">
                                 <div class="item-list form">
                                     <div class="form-item">
-                                        <label>Indirizzo</label>
-                                        <input type="text" placeholder="" value="piazza privata Guide Maquiguas">
-                                    </div>
-                                    <div class="form-item left" style="width: 55%;">
-                                        <label>Citt&agrave;</label>
-                                        <input type="text" placeholder="">
-                                    </div>
-                                    <div class="form-item right" style="width: 35%;">
-                                        <label>Cap</label>
-                                        <input type="text" placeholder="">
-                                    </div>
-                                    <div class="form-item left " style="width: 35%;">
-                                        <label>Provincia</label>
-                                        <input type="text" placeholder="">
+                                        <h3>Prima casa</h3>
+                                        <a href="#" class="button full-width">Residente</a>
+                                        <a href="#" class="button full-width">Non residente</a>
+                                        <a href="#" class="button full-width">Affittata</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="item">
-                               
+
                             </div>
                         </div>
                         <div class="scheda-table single-column">
