--- a/src/global.scss
+++ b/src/global.scss
@@ -36,6 +36,8 @@ $default-content-area-right-margin: 60px;
 $default-content-list-vertical-position: 130px;
 
 $highlight-text-color: #104D77;
+$default-blue-color: #374A59;
+$default-text-color: #283943;
 $label-color:       #707070;
 $grey-1:            #ebebeb;
 $grey-highlight:    #4A4A4A;
@@ -58,7 +60,8 @@ $colors: (
     danger:     #f53d3d,
     light:      #f4f4f4,
     dark:       #222,
-    bar:        #EDF4F8
+    bar:        #EDF4F8,
+    def:        #283943
 );
 
 @import url('https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i&display=swap');
@@ -66,6 +69,7 @@ $colors: (
 :root,
 :root[mode="md"],
 :root[mode="ios"] {
+    --ion-text-color: #283943;
     --ion-font-family: 'Rubik', sans-serif;
     font-family: var(--ion-font-family) !important;
 }
@@ -88,7 +92,15 @@ $colors: (
 }
 
 /* Custom style */
-
+.hidden {
+    display: none;
+}
+.left {
+    float: left;
+}
+.right {
+    float: right;
+}
 .table {
     display: table;
     width: 100%;
@@ -115,12 +127,26 @@ ul {
         }
     }
 }
+.form-item {
+    margin: 10px 5px 0 5px;
+    label {
+        display: inline-block;
+        margin: 0 0 5px 15px;
+        font-size: .9em;
+    }
+}
+input {
+    font-size: .9em;
+    border: solid 1px  $grey-1;
+    padding: 8px 10px 6px;
+    width: 100%;
+}
 
 .button {
     font-family: Arial, sans-serif;
     background: $highlight-text-color;
     color: #fff;
-    border-radius: 25px;
+    border-radius: 15px;
     padding: 9px 16px 10px 36px;
     display: inline-block;
     font-size: .7em;
@@ -173,6 +199,11 @@ ul {
     }
     &.back {
         background-image: url('/assets/img/icon-back@2x.png');
+    }
+    &.forward {
+        background-image: url('/assets/img/icon-forward@2x.png');
+        background-position: right 12px center;
+        padding: 9px 36px 10px 16px;
     }
     &.only-icon {
         padding-left: 20px;
@@ -283,6 +314,30 @@ ion-content {
         }
          .tool-area {
             right: $default-right-area-width;
+        }
+    }
+    &.wizard {
+        .scheda {
+            width: 660px;
+            left: 50%;
+            margin-left: -330px;
+        }
+        .scheda-content {
+            .item {
+                height: auto !important;
+            }
+            .item-list.form {
+                height: 300px !important;
+                h3 {
+                    text-align:center;
+                }
+                .button {
+                    margin: 15px 60px;
+                    padding: 25px 0;
+                    font-size: .9em;
+                    
+                }
+            }
         }
     }
 }
@@ -830,6 +885,19 @@ ion-content {
                 position: relative;
                 span {
                     float: right;
+                    &.step {
+                        position: absolute;
+                        top: 2px;
+                        left: 2px;
+                        bottom: 2px;
+                        color: #fff;
+                        border-radius: 50%;
+                        line-height: 2em;
+                        text-align: center;
+                        width: 31px;
+                        font-size: .8em;
+                        background-color: $highlight-text-color;
+                    }
                 }
                 .button {
                     position: absolute;
@@ -1045,18 +1113,30 @@ ion-content {
 }
 
 
-/* ammortmento */
+/* ammortamento */
 
 .ammortamento { 
     .item {
+        .table-row {
+            &.totale {
+                font-weight: bold;
+                color: $default-blue-color;
+                .table-cell {
+                    border-bottom: none;
+                    padding-bottom: 0px;
+                }
+                
+            }
+        }
         .table-cell {
-            text-align: center;
+            text-align: right;
         }
         .item-title  {
             .table-cell {
                 font-size: .65em;
+                text-align: right;
                 &:first-of-type {
-                    width: 11%;
+                    width: 12%;
                     font-size: .9em;
                     text-align: left;
                 }
@@ -1065,25 +1145,34 @@ ion-content {
         .item-list {
             height :auto !important;
             padding: 0 15px;
+            margin-bottom: 15px;
             .table-cell {
-                padding: 5px 0;
+                font-size: .75em;
+                padding: 8px 0;
                 border-bottom: dashed 1px $grey-1;
                 //border-right: solid 1px $grey-1;
-                &:nth-child(1) {
-                    text-align: left;
-                }
                 &:last-of-type {
                     border-right: none;
                 }
-                font-size: .8em;
                 &:first-of-type {
-                    width: 11%;
+                    width: 12%;
                     text-align: left;
                 }
             }
         }
     }
 }
+
+
+/* WIZARD */
+
+.wizard {
+    .item-title {
+        padding-left: 40px !important;
+    }
+}
+
+
 
 /* RIGHT AREA */
 
