--- a/src/app/wizard-destinazione/wizard-destinazione.page.html
+++ b/src/app/wizard-destinazione/wizard-destinazione.page.html
@@ -38,7 +38,7 @@
                     <div class="scheda-table single-column">
                         <div class="scheda-row">
                             <div class="item">
-                                <div class="item-title"><span class="step">1</span> Aggiungi o modifica l'indirizzo dell'immobile</div>
+                                <div class="item-title"><span class="step">2</span> Destinazione</div>
 
                             </div>
                         </div>
@@ -47,20 +47,27 @@
                                 <div class="item-list form">
                                     <div class="form-item">
                                         <h3>Prima casa</h3>
-                                        <a href="#" class="button full-width">Residente</a>
-                                        <a href="#" class="button full-width">Non residente</a>
-                                        <a href="#" class="button full-width">Affittata</a>
+                                        <a href="wizard-data-destinazione" class="button choice full-width">Residente</a>
+                                        <a href="wizard-data-destinazione" class="button choice full-width">Non residente</a>
+                                        <a href="wizard-data-destinazione" class="button choice full-width">Affittata</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="item">
-
+                                <div class="item-list form">
+                                    <div class="form-item">
+                                        <h3>Seconda casa</h3>
+                                        <a href="wizard-data-destinazione" class="button choice full-width">Residente</a>
+                                        <a href="wizard-data-destinazione" class="button choice full-width">Non residente</a>
+                                        <a href="wizard-data-destinazione" class="button choice full-width">Affittata</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="scheda-table single-column">
                             <div class="item">
                                 <div class="item-list ">
-                                    <a href="#" class="button forward" style="float:right;">avanti</a>
+                                    <a href="wizard" class="button light back left">indietro</a>
                                 </div>
                             </div>
                         </div>
