--- a/src/app/wizard-dati-tassazione/wizard-dati-tassazione.page.html
+++ b/src/app/wizard-dati-tassazione/wizard-dati-tassazione.page.html
@@ -38,39 +38,48 @@
                     <div class="scheda-table single-column">
                         <div class="scheda-row">
                             <div class="item">
-                                <div class="item-title"><span class="step">1</span> Aggiungi o modifica l'indirizzo dell'immobile</div>
-                                
+                                <div class="item-title"><span class="step">4</span> Prima casa <img src="/assets/img/icon-right-arrow@2x.png"> Residente <img src="/assets/img/icon-right-arrow@2x.png"> Tassazione</div>
                             </div>
                         </div>
                         <div class="scheda-table">
                             <div class="item">
                                 <div class="item-list form">
-                                    <div class="form-item">
-                                        <label>Indirizzo</label>
-                                        <input type="text" placeholder="" value="piazza privata Guide Maquiguas">
+                                    <div class="form-item single">
+                                        <label>Tipologia tassa</label>
+                                        <select class="select-css">
+                                            <option>select 1</option>
+                                            <option>select 1</option>
+                                            <option>select 1</option>
+                                            <option>select 1</option>
+                                            <option>select 1</option>
+                                        </select>
                                     </div>
-                                    <div class="form-item left" style="width: 55%;">
-                                        <label>Citt&agrave;</label>
-                                        <input type="text" placeholder="">
+                                    <div class="form-item single">
+                                        <label>Importo annuale</label>
+                                        <div class="type">
+                                            <input type="text" placeholder="" value="24"><span>&euro;</span>
+                                        </div>
                                     </div>
-                                    <div class="form-item right" style="width: 35%;">
-                                        <label>Cap</label>
-                                        <input type="text" placeholder="">
-                                    </div>
-                                    <div class="form-item left " style="width: 35%;">
-                                        <label>Provincia</label>
-                                        <input type="text" placeholder="">
+                                    <div class="form-item single">
+                                        <a href="#" class="button add">aggiungi</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="item">
-                               
+                                <ul class="item-list form">
+                                    <li><span>Tipologia tassa</span><span>Importo annuale</span></li>
+                                    <li><span>Imu</span><span>1,200 &euro; <a href="#" class="button small">x</a></span></li>
+                                    <li><span>Imu</span><span>1,200 &euro; <a href="#" class="button small">x</a></span></li>
+                                    <li><span>Imu</span><span>1,200 &euro; <a href="#" class="button small">x</a></span></li>
+                                    <li><span>Imu</span><span>1,200 &euro; <a href="#" class="button small">x</a></span></li>
+                                </ul>
                             </div>
                         </div>
                         <div class="scheda-table single-column">
                             <div class="item">
                                 <div class="item-list ">
-                                    <a href="wizard-destinazione" class="button forward right">avanti</a>
+                                    <a href="wizard-dati-catastali" class="button light back left">indietro</a>
+                                    <a href="#" class="button forward right">salva</a>
                                 </div>
                             </div>
                         </div>
