--- a/src/global.scss
+++ b/src/global.scss
@@ -92,6 +92,13 @@ $colors: (
 }
 
 /* Custom style */
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
 .hidden {
     display: none;
 }
@@ -128,11 +135,33 @@ ul {
     }
 }
 .form-item {
-    margin: 10px 5px 0 5px;
+    padding: 10px 5px 0 5px;
+    &.single {
+        clear: both;
+    }
+    &.left, &.right {
+        width: 49%;
+    }
     label {
         display: inline-block;
         margin: 0 0 5px 15px;
         font-size: .9em;
+    }
+    
+    .type {
+        position: relative;
+        span {
+            
+            position: absolute; 
+            top: 0;
+            right: 0;
+            height: 100%;
+            line-height: 200%;
+            padding: 0 10px;
+            border-left: solid 1px $grey-1;
+            color: $default-border-grey;
+            font-size: 1em;
+        }
     }
 }
 input {
@@ -141,6 +170,185 @@ input {
     padding: 8px 10px 6px;
     width: 100%;
 }
+
+/* SELECT */
+
+.select-css {
+    display: block;
+    font-size: .9em;
+    padding: 8px 10px 6px;
+    width: 100%;
+    max-width: 100%; 
+    box-sizing: border-box;
+    margin: 0;
+    border: 1px solid $grey-1;
+    box-shadow: 0;
+    border-radius: 0;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: #fff;
+    background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E');
+    background-repeat: no-repeat, repeat;
+    background-position: right .7em top 50%, 0 0;
+    background-size: .65em auto, 100%;
+}
+.select-css::-ms-expand {
+    display: none;
+}
+.select-css:hover {
+    border-color: #888;
+}
+.select-css:focus {
+    border-color: #aaa;
+    box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
+    box-shadow: 0 0 0 3px -moz-mac-focusring;
+    color: #222; 
+    outline: none;
+}
+.select-css option {
+    font-weight:normal;
+}
+
+
+
+
+/* SWITCH */
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 28px;
+  margin: 2px 0 3px 0 !important;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: $default-border-grey;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 24px;
+  width: 24px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: $highlight-text-color;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px $highlight-text-color;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(22px);
+  -ms-transform: translateX(22px);
+  transform: translateX(22px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+/* RADIO BUTTON */
+
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  margin: 2px 0 3px 0 !important;
+  line-height: 2em;
+}
+
+/* Hide the browser's default radio button */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 28px;
+  width: 28px;
+  background-color: $default-border-grey;
+  border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: $default-border-grey;
+}
+
+/* When the radio button is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: $highlight-text-color;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.container .checkmark:after {
+  top: 2px;
+  left: 2px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background: white;
+}
+
+
+
 
 .button {
     font-family: Arial, sans-serif;
@@ -162,10 +370,13 @@ input {
     &.full-width {
         display: block;
     }
+    &.small {
+        padding: 3px 10px 4px 10px;
+    }
     &.light {
         background-color: transparent;
-        padding: 0;
-        margin: 0;
+        /*padding: 0;
+        margin: 0;*/
     }
     &.search {
         border-top-left-radius: 0;
@@ -199,6 +410,10 @@ input {
     }
     &.back {
         background-image: url('/assets/img/icon-back@2x.png');
+        &.light {
+            background-image: url('/assets/img/icon-back-light@2x.png');
+            color: $label-color;
+        }
     }
     &.forward {
         background-image: url('/assets/img/icon-forward@2x.png');
@@ -328,14 +543,31 @@ ion-content {
             }
             .item-list.form {
                 height: 300px !important;
+                    li {
+                        padding-top: 8px;
+                        padding-bottom: 8px;
+                        &:first-of-type {
+                            border-bottom: 0;
+                            padding-bottom: 10px;
+                        }
+                        span {
+                            font-size: .9em;
+                            .button {
+                                margin-left: 10px;
+                            }
+                        }
+                    }
                 h3 {
                     text-align:center;
+                    padding-bottom: 30px;
+                    font-size: 1.1em;
+                    font-weight: normal;
+                    background: url('/assets/img/icon-down-arrow@2x.png') center bottom no-repeat;
                 }
-                .button {
-                    margin: 15px 60px;
-                    padding: 25px 0;
+                .choice {
+                    margin: 10px 60px;
+                    padding: 20px 0;
                     font-size: .9em;
-                    
                 }
             }
         }
@@ -898,6 +1130,10 @@ ion-content {
                         font-size: .8em;
                         background-color: $highlight-text-color;
                     }
+                }
+                img {
+                    vertical-align: middle;
+                    margin: 0 5px;
                 }
                 .button {
                     position: absolute;
